# gst-inspector

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md  opencppcoverage_config.txt  opencppcoverage_config.txt.in
cmake/: FindGLib2.cmake  FindGStreamer.cmake  TestTools.cmake
design/: caps_parsing.txt  dictionary.txt  inspectors-return-format.txt  instpectors-class.txt  instpectors-core.txt  instpectors-objects.txt  instpectors-subclasses.txt  instpectors-utils.txt  param_value.txt  stock-inspectors.txt  testing.txt  type_reader.txt
example/: CMakeLists.txt  gst_inspect.c  main.c  simple_inspection.c  simple_listing.c
include/: common.h  element_info.h  gst_inspect_server_core.h  gstdictionary.h  gstinspector.h  gstinspector_class.h  gstinspector_priv.h  gstinspectors.h  param_info.h
include/type_reader/: bool_reader.h  boxed_reader.h  double_reader.h  enum_reader.h  flags_reader.h  float_reader.h  fraction_reader.h  int64_reader.h  int_reader.h  long_reader.h  object_reader.h  pointer_reader.h  string_reader.h  type_reader.h  type_reader_priv.h  uint64_reader.h  uint_reader.h  ulong_reader.h
src/: common.cpp  element_info.cpp  gstdictionary.c  gstinspector.c  gstinspector_utils.c  param_info.cpp
src/type_reader/: int_reader.c  (+33 more)
tests/: CMakeLists.txt  testutils.h
tests/core/: CMakeLists.txt  element_inspect_by_name_works.c  element_inspector_invalid_element_fails.c  element_inspector_works.c  element_plugin_feature_inspector_works.c  element_preceeds_plugin_by_name_inspection.c  get_element_inspectors_names_works.c  get_plugin_inspectors_names_works.c  gsttestplugin.h  invalid_plugin_feature_inspector_fails.c  nonexists_feature_inspect_by_name_fails.c  null_inspect_by_name_fails.c  plugin_inspect_by_name_works.c  plugin_inspector_works.c  pluign_inspector_invalid_plugin_fails.c  register_element_inspector_succeeds.c  register_plugin_inspector_succeeds.c  register_same_element_inspector_twice_fails.c  register_same_plugin_inspector_twice_fails.c  remove_exists_element_inspector_succeeds.c  remove_exists_plugin_inspector_succeeds.c  remove_nonexists_element_inspector_fails.c  remove_nonexists_plugin_inspector_fails.c  static_typefind_plugin_feature_inspector_works.c  static_typefind_plugin_feature_with_caps_extensions_inspector_works.c  static_typefind_plugin_feature_with_caps_inspector_works.c  tracer_inspect_by_name_works.c  tracer_plugin_feature_inspector_works.c  typefind_inspect_by_name_works.c  typefind_plugin_feature_inspector_works.c
tests/core/dictionary/: test_dictionary_strings.c
tests/core/inspectors/: CMakeLists.txt  param_inspector_nonreadable_param_works.c  param_inspector_works.c
tests/core/inspectors/element/: CMakeLists.txt  element_actions_inspector_args.c  element_actions_inspector_no_actions.c  element_actions_inspector_no_args.c  element_actions_inspector_no_args_no_retval.c  element_actions_inspector_only_signals.c  element_children_inspector_no_bin.c  element_children_inspector_no_children.c  element_children_inspector_works.c  element_clocking_inspector_no_clocking.c  element_clocking_inspector_requires.c  element_clocking_inspector_requires_and_provides.c  element_clocking_inspector_requires_and_provides_null.c  element_factory_inspector_works.c  element_factory_inspector_works_additional_metadata.c  element_hierarchy_inspector_works.c  element_interface_inspector_no_ifaces_does_nothing.c  element_interface_inspector_works.c  element_pad_templates_inspector_always.c  element_pad_templates_inspector_no_templs.c  element_pad_templates_inspector_props.c  element_pad_templates_inspector_request.c  element_pad_templates_inspector_sometimes.c  element_pads_inspector_no_pads.c  element_pads_inspector_pads_caps_no_template.c  element_pads_inspector_pads_caps_template.c  element_pads_inspector_pads_no_caps.c  element_plugin_inspector_works.c  element_preset_inspector_empty_list.c  element_preset_inspector_full_list.c  element_preset_inspector_not_preset.c  element_preset_inspector_null_preset.c  element_signals_inspector_args.c  element_signals_inspector_no_args.c  element_signals_inspector_no_args_no_retval.c  element_signals_inspector_no_signals.c  element_signals_inspector_only_actions.c  element_signals_inspector_sometimes_pad.c  element_uri_inspector_no_uri.c  element_uri_inspector_sink_no_protocols.c  (+8 more)
tests/core/inspectors/plugin/: CMakeLists.txt  plugin_details_inspector_works_no_release_date.c  plugin_details_inspector_works_release_date.c  plugin_details_inspector_works_release_date_time.c  plugin_features_inspector_works_full_features.c  plugin_features_inspector_works_no_features.c  testplugindate.c  testplugindatetime.c
tests/params/: CMakeLists.txt  bool_param_test.c  combination_flags_param_test.c  double_param_test.c  enum_param_test.c  flags_param_test.c  float_param_test.c  fraction_param_test.c  int64_param_test.c  int_param_test.c  known_pointer_param_test.c  known_value_array_param_test.c  long_param_test.c  no_flags_param_test.c  null_string_param_test.c  single_flags_param_test.c  string_param_test.c  uint64_param_test.c  uint_param_test.c  ulong_param_test.c  unknown_pointer_param_test.c  unknown_value_array_param_test.c  unknown_value_enum_param_test.c
tests/params/boxed/: CMakeLists.txt  any_caps_param_type_test.c  empty_caps_param_type_test.c  gfakeboxed.h  no_features_caps_param_type_test.c  null_caps_param_type_test.c  null_structure_param_type_test.c  register_boxed_content_reader_succeeds_test.c  register_boxed_content_reader_twice_fails_test.c  structure_param_type_test.c  sysmem_features_caps_param_type_test.c  unknown_boxed_param_type_test.c  with_features_caps_param_type_test.c
tests/params/core/: CMakeLists.txt  fill_type_calls_reading_function.c  gfakeparam.h  register_new_param_type_succeeds.c  register_new_param_type_twice_fails.c  unknown_type_calls_default_reader.c
tests/params/object/: CMakeLists.txt  gfakeobject.h  null_object_param_type_test.c  object_param_type_test.c  register_same_object_content_reader_twice_fails_test.c  unknown_object_param_type_test.c
(+22 files in other folders)
